# 3d-raytracer

./: .clang-format  .gitignore  CMakeLists.txt  README.md  compile_commands.json  convert.sh  run.sh
include/: camera.h  color.h  hittable.h  hittable_list.h  interval.h  material.h  ray.h  sphere.h  utility.h  vec3.h
src/: main.cpp
